--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "@reach/router": "^1.3.4",
     "@react-oauth/google": "^0.6.0",
+    "@sendgrid/mail": "^7.7.0",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.8.1",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "google-auth-library": "^6.1.3",
@@ -34,6 +36,7 @@
     "react-router-dom": "^5.2.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1",
+    "twilio": "^3.84.1",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
