--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reach/router": "^1.3.4",
     "@react-oauth/google": "^0.6.0",
     "@sendgrid/mail": "^7.7.0",
+    "argon2": "^0.30.3",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.8.1",
     "dotenv": "^16.0.3",
