--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1",
     "twilio": "^3.84.1",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
