--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sendgrid/mail": "^7.7.0",
     "argon2": "^0.30.3",
     "connect-ensure-login": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "core-js": "^3.8.1",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
