--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "google-auth-library": "^6.1.3",
+    "joi": "^17.7.0",
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.11.9",
     "nodemon": "^2.0.6",
