--- a/package.json
+++ b/package.json
@@ -37,14 +37,17 @@
     "node-sass": "^8.0.0",
     "nodemon": "^2.0.6",
     "react": "^16.14.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^16.14.0",
+    "react-overlays": "^5.2.1",
     "react-router": "^6.7.0",
     "react-router-dom": "^6.7.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1",
-    "twilio": "^4.0.0",
+    "twilio": "^3.8.4",
     "url-loader": "^4.1.1",
     "uuid": "^9.0.0"
   },
