--- a/.babelrc
+++ b/.babelrc
@@ -5,10 +5,9 @@
           "corejs": "3",
           "useBuiltIns": "usage"
           }],
-        "@babel/react",
+        ["@babel/react",
         {
           "plugins" : ["@babel/plugin-proposal-class-properties"]
-        }
-
+        }]
     ]
 }
