--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^16.14.0",
+    "react-modal": "^3.16.1",
     "react-overlays": "^5.2.1",
     "react-router": "^6.7.0",
     "react-router-dom": "^6.7.0",
@@ -61,6 +62,8 @@
     "@babel/preset-stage-0": "^7.8.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "react-hot-loader": "^4.13.0",
